Fix container height, even spacing still needs fixing

--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,30 @@
+html,body { 
+    height:100%; 
+}
+
+body {
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
+    align-content: stretch;
+    
+}
 
 .container {
     display: flex;
-    flex: 1;
-    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: space-evenly;
     padding: 32px;
+    flex-wrap: wrap;
+    height: 100%;
+}
+
+.item {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 20px;
+    width: 20px;
+    padding: 20px;
+    margin: 5px;
 }
